2003-08-14  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Fixed numerous bitfield problems.

	* src/SDCC.y: More bitfield related error checking
	* src/SDCCsymt.h,
	* src/SDCCsymt.c (compStructSize): fixed bitfield offset calc
	* support/Util/SDCCerr.h,
	* support/Util/SDCCerr.c: Added & edited some bitfield err msgs
	* src/mcs51/gen.c (genPackBits, genUnpackBits): fixed mask bugs
	* src/ds390/gen.c (genPackBits, genUnpackBits): fixed mask bugs
	* support/regression/tests/bitfields.c: tests added
	
2003-08-13  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Made the constant following the "interrupt" keyword optional. If
	omitted, the function will not automatically be given an entry
	in the interrupt vector table (similar to #pragma NOIV, but
	less syntacticly kludgy). The interrupt number is also now
	range checked. Also fixed a bug in the high order bit example
	in the manual.

	* src/SDCC.y
	* src/SDCCmem.c
	* src/SDCCglue.c
	* src/SDCCsymt.h
	* support/Util/SDCCerr.c
	* support/Util/SDCCerr.h
	* doc/sdccman.lyx

2003-08-13  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCcse.c (algebraicOpts): fix bug converting op from value to type
	* src/SDCCicode.c (operandOperation): rewritten some ops
	(*, ==, unary_minus) to fix possible overflows and to accord with ANSI
	* src/SDCCsymt.c (computeType): literals are handled the same way as any
	other type
	* src/SDCCval.c (cheapestVal): removed, it doesn't accord with ANSI (can
	be re-activated by defining REDUCE_LITERALS)
	* src/SDCCval.c (constVal): fixed; hex and octal constants can be
	unsigned, but are signed by default
	* src/SDCCval.c (constVal): rearranged
	* src/SDCCval.c (valMod): preliminary fix
	* src/SDCCval.c (valCastLiteral): use TYPE_* types
	* support/regression/literalop.c: added, work in progress

2003-08-12  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Generate warnings for useless declarations like "char data;"
	that don't do what new users expect.

	* src/SDCC.y